Actually fixed vertical spacing this time.

--- a/MMM-MyTTC.css
+++ b/MMM-MyTTC.css
@@ -58,7 +58,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  line-height: 18px;
+  line-height: 20px;
   margin-left: 30px;
   margin-bottom: 12px;
 }
